<resources>
    <string name="kde_connect">COSMIC Connect</string>
    <string name="manifest_label_share">Send to Device</string>
    <string name="open_on_desktop">Open on Desktop</string>
    <string name="open_on_desktop_no_devices">No COSMIC Desktop devices available. Please pair a device first.</string>
    <string name="open_on_desktop_sharing_to">Opening on %s</string>
    <string name="open_on_desktop_error">Failed to open on desktop</string>
    <string name="share_error_no_mime_type">Cannot share: unknown content type</string>
    <string name="foreground_notification_no_devices">Not connected to any device</string>
    <string name="foreground_notification_devices">Connected to: %s</string>
    <string name="foreground_notification_send_clipboard">Send Clipboard</string>
    <string name="pref_plugin_telephony">Telephony notifier</string>
    <string name="pref_plugin_telephony_desc">Send notifications for incoming calls</string>
    <string name="pref_plugin_battery">Battery report</string>
    <string name="pref_plugin_battery_desc">Periodically report battery status</string>
    <string name="pref_plugin_connectivity_report">Connectivity report</string>
    <string name="pref_plugin_connectivity_report_desc">Report network signal strength and status</string>
    <string name="pref_plugin_networkinfo">Network information</string>
    <string name="pref_plugin_networkinfo_desc">Share WiFi and network connectivity status with connected devices</string>
    <string name="pref_plugin_power">Power management</string>
    <string name="pref_plugin_power_desc">Send power commands to the remote device</string>
    <string name="power_shutdown">Shutdown</string>
    <string name="power_reboot">Reboot</string>
    <string name="power_suspend">Suspend</string>
    <string name="power_hibernate">Hibernate</string>
    <string name="power_confirm_title">Confirm power action</string>
    <string name="power_confirm_shutdown">Shut down %s?</string>
    <string name="power_confirm_reboot">Reboot %s?</string>
    <string name="power_confirm_suspend">Suspend %s?</string>
    <string name="power_confirm_hibernate">Hibernate %s?</string>
    <string name="pref_plugin_lock">Screen lock</string>
    <string name="pref_plugin_lock_desc">Lock or unlock the remote device\'s screen</string>
    <string name="pref_plugin_screenshare">Screen share</string>
    <string name="pref_plugin_screenshare_desc">Share screen between devices with configurable quality</string>
    <string name="pref_plugin_virtualmonitor">Virtual Monitor</string>
    <string name="pref_plugin_virtualmonitor_desc">Use Android device as additional display for desktop</string>
    <string name="pref_plugin_filesync">File Sync</string>
    <string name="pref_plugin_filesync_desc">Synchronize files between devices</string>
    <string name="pref_plugin_audiostream">Audio streaming</string>
    <string name="pref_plugin_audiostream_desc">Stream audio between phone and desktop</string>
    <string name="pref_plugin_webcam">Webcam</string>
    <string name="pref_plugin_webcam_desc">Use device camera as a webcam for the desktop</string>
    <string name="lock_lock">Lock screen</string>
    <string name="lock_unlock">Unlock screen</string>
    <string name="pref_plugin_digitizer">Drawing tablet</string>
    <string name="pref_plugin_digitizer_desc">Use your device as a pressure sensitive drawing tablet</string>
    <string name="pref_plugin_sftp">Filesystem access</string>
    <string name="pref_plugin_sftp_desc">Allows to browse this device\'s filesystem remotely</string>
    <string name="pref_plugin_clipboard">Clipboard sync</string>
    <string name="pref_plugin_clipboard_desc">Share the clipboard content</string>
    <string name="pref_plugin_clipboard_sent">Clipboard Sent</string>
    <string name="pref_plugin_open_on_desktop">Open on Desktop</string>
    <string name="pref_plugin_open_on_desktop_desc">Send URLs, files, and text to open on COSMIC Desktop</string>
    <string name="open_plugin_invalid_url">Invalid URL or disallowed scheme</string>
    <string name="open_plugin_sent_url">Sent URL to desktop</string>
    <string name="open_plugin_sent_file">Sent file to desktop</string>
    <string name="open_plugin_sent_text">Sent text to desktop</string>
    <string name="open_plugin_success">Opened on desktop successfully</string>
    <string name="open_plugin_error">Failed to open on desktop</string>
    <string name="pref_plugin_open">Open on Phone</string>
    <string name="pref_plugin_open_desc">Receive URLs and content from COSMIC Desktop to open on Android</string>
    <string name="open_plugin_notification_title">%s wants to open</string>
    <string name="open_plugin_action_open">Open</string>
    <string name="open_plugin_action_reject">Reject</string>
    <string name="open_plugin_permission_explanation">Notifications are required to show confirmation when COSMIC Desktop wants to open content on your device</string>
    <string name="pref_plugin_mousepad">Remote input</string>
    <string name="pref_plugin_mousepad_desc_nontv">Use your phone or tablet as a touchpad and keyboard</string>
    <string name="pref_plugin_mousepad_desc_tv">Use your phone or tablet as a TV remote</string>
    <string name="pref_plugin_presenter">Presentation remote</string>
    <string name="pref_plugin_presenter_desc">Use your device to change slides in a presentation</string>
    <string name="pref_plugin_remotekeyboard">Receive remote keypresses</string>
    <string name="pref_plugin_remotekeyboard_desc">Receive keypress events from remote devices</string>
    <string name="pref_plugin_mpris">Multimedia controls</string>
    <string name="pref_plugin_mpris_desc">Provides a remote control for your media player</string>
    <string name="pref_plugin_runcommand">Run Command</string>
    <string name="pref_plugin_runcommand_desc">Trigger remote commands from your phone or tablet</string>
    <string name="pref_plugin_contacts">Contacts Synchronizer</string>
    <string name="pref_plugin_contacts_desc">Allow synchronizing the device\'s contacts book</string>
    <string name="pref_plugin_ping">Ping</string>
    <string name="pref_plugin_ping_desc">Send and receive pings</string>
    <string name="pref_plugin_notifications">Notification sync</string>
    <string name="pref_plugin_notifications_desc">Access your notifications from other devices</string>
    <string name="pref_plugin_receive_notifications">Receive notifications</string>
    <string name="pref_plugin_receive_notifications_desc">Receive notifications from the other device and display them on Android</string>
    <string name="pref_plugin_sharereceiver">Share and receive</string>
    <string name="pref_plugin_sharereceiver_desc">Share files and URLs between devices</string>
    <string name="device_list_empty">No devices</string>
    <string name="ok">OK</string>
    <string name="sad_ok">OK :(</string>
    <string name="cancel">Cancel</string>
    <string name="open_settings">Open settings</string>
    <string name="no_permissions">You need to grant permission to access notifications</string>
    <string name="no_permission_mprisreceiver">To be able to control your media players you need to grant access to the notifications</string>
    <string name="no_permissions_remotekeyboard">To receive keypresses you need to activate the COSMIC Connect Remote Keyboard</string>
    <string name="send_ping">Send ping</string>
    <string name="open_mpris_controls">Multimedia control</string>
    <string name="remotekeyboard_editing_only" translatable="false">remotekeyboard_editing_only</string>
    <string name="remotekeyboard_editing_only_title" translatable="true">Handle remote keys only when editing</string>
    <string name="remotekeyboard_not_connected" translatable="true">There is no active remote keyboard connection, establish one in COSMIC Ext Connect</string>
    <string name="remotekeyboard_connected" translatable="true">Remote keyboard connection is active</string>
    <string name="remotekeyboard_multiple_connections" translatable="true">There is more than one remote keyboard connection, select the device to configure</string>
    <string name="open_mousepad">Remote input</string>
    <string name="open_mousepad_tv">TV remote</string>
    <string name="mousepad_info">Move a finger on the screen to move the mouse cursor. Tap for a click, and use two/three fingers for right and middle buttons. Use 2 fingers to scroll. Use a long press to drag\'n drop. Gyro mouse functionality can be enabled from plugin preferences</string>
    <string name="mousepad_info_no_gestures">Move a finger on the screen to move the mouse cursor, tap for a click.</string>
    <string name="mousepad_keyboard_input_not_supported">Keyboard input not supported by the paired device</string>
    <string name="mousepad_single_tap_settings_title">Set one finger tap action</string>
    <string name="mousepad_double_tap_settings_title">Set two finger tap action</string>
    <string name="mousepad_triple_tap_settings_title">Set three finger tap action</string>
    <string name="mousepad_sensitivity_settings_title">Set touchpad sensitivity</string>
    <string name="mousepad_mouse_buttons_title">Show mouse buttons</string>
    <string name="mousepad_acceleration_profile_settings_title">Set pointer acceleration</string>
    <string name="camera_back">Back Camera</string>
    <string name="camera_default_camera_title">Default Camera</string>
    <string name="camera_resolution_title">Default Resolution</string>
    <string name="camera_quality_title">Quality Preset</string>
    <string name="camera_quality_medium">Medium (2 Mbps)</string>
    <string name="camera_autostart_title">Auto-start Streaming</string>
    <string name="camera_autostart_summary">Automatically start streaming when desktop requests</string>
    <string name="camera_preference_key_default_camera" translatable="false">camera_default_camera</string>
    <string name="camera_preference_key_resolution" translatable="false">camera_resolution</string>
    <string name="camera_preference_key_quality" translatable="false">camera_quality</string>
    <string name="camera_preference_key_autostart" translatable="false">camera_autostart</string>
    <string name="extendeddisplay_preference_key_server_address" translatable="false">extendeddisplay_server_address</string>
    <string name="extendeddisplay_preference_key_connection_mode" translatable="false">extendeddisplay_connection_mode</string>
    <string name="extendeddisplay_preference_key_display_mode" translatable="false">extendeddisplay_display_mode</string>
    <string name="extendeddisplay_preference_key_show_debug" translatable="false">extendeddisplay_show_debug</string>
    <string name="extendeddisplay_preference_key_show_latency" translatable="false">extendeddisplay_show_latency</string>
    <string name="extendeddisplay_category_connection">Connection</string>
    <string name="extendeddisplay_category_display">Display</string>
    <string name="extendeddisplay_category_debug">Debug</string>
    <string name="extendeddisplay_server_address_title">Server Address</string>
    <string name="extendeddisplay_server_address_dialog_title">Enter Server Address</string>
    <string name="extendeddisplay_server_address_dialog_message">Enter the IP address or hostname of your COSMIC Desktop server (e.g., 192.168.1.100:5900)</string>
    <string name="extendeddisplay_connection_mode_title">Connection Mode</string>
    <string name="extendeddisplay_display_mode_title">Display Mode</string>
    <string name="extendeddisplay_show_debug_title">Show Debug Info</string>
    <string name="extendeddisplay_show_debug_summary">Display FPS, bitrate, and connection statistics</string>
    <string name="extendeddisplay_show_latency_title">Show Latency Overlay</string>
    <string name="extendeddisplay_show_latency_summary">Display frame latency in milliseconds</string>
</resources>